src/objects/Write_In__c.object
<CustomObject>
    <fields>
        <fullName>Multi_Products__c</fullName>
        <description>When TriTech Product Involved = Multi-Product, then this field is required</description>
        <inlineHelpText>When TriTech Product Involved = Multi-Product, you must select the applicable products</inlineHelpText>
        <label>Multi-Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TriTech 911</fullName>
                </value>
                <value>
                    <fullName>Inform CAD</fullName>
                </value>
                <value>
                    <fullName>Inform CAD Archive Server</fullName>
                </value>
                <value>
                    <fullName>Inform Mobile</fullName>
                </value>
                <value>
                    <fullName>Inform Me</fullName>
                </value>
                <value>
                    <fullName>TTMS</fullName>
                </value>
                <value>
                    <fullName>Inform RMS Classic</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS - Hosted</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS GIS</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS GIS - Hosted</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS Reporting Server</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS Reporting Server - Hosted</fullName>
                </value>
                <value>
                    <fullName>Inform FBR</fullName>
                </value>
                <value>
                    <fullName>Inform Jail</fullName>
                </value>
                <value>
                    <fullName>Fire Records</fullName>
                </value>
                <value>
                    <fullName>IQ Search</fullName>
                </value>
                <value>
                    <fullName>CrimeView Dashboard</fullName>
                </value>
                <value>
                    <fullName>FireView Dashboard</fullName>
                </value>
                <value>
                    <fullName>Crimemapping.com</fullName>
                </value>
                <value>
                    <fullName>Responsemapping.com</fullName>
                </value>
                <value>
                    <fullName>CAD 2000/Unix CAD</fullName>
                </value>
                <value>
                    <fullName>Copperfire</fullName>
                </value>
                <value>
                    <fullName>FACTS/IMS</fullName>
                </value>
                <value>
                    <fullName>TC CAD</fullName>
                </value>
                <value>
                    <fullName>TC Mobile</fullName>
                </value>
                <value>
                    <fullName>TC RMS</fullName>
                </value>
                <value>
                    <fullName>VisionCAD</fullName>
                </value>
                <value>
                    <fullName>VisionMOBILE</fullName>
                </value>
                <value>
                    <fullName>DN CAD/Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needed_By_Date__c</fullName>
        <defaultValue>Today() + 10</defaultValue>
        <label>Needed By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>/*&quot;sd&quot;*/
 Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>/*Quote_Proposal__r.Apttus_Proposal__Opportunity__r.Name*/
 Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Manager__c</fullName>
        <formula>Opportunity__r.Owner.Manager.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Price_Book__c</fullName>
        <formula>TEXT(Opportunity__r.Price_Book__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Price Book</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Custom Write-Ins</relationshipLabel>
        <relationshipName>Work_Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Hours__c</fullName>
        <label>Other Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMO_Hours__c</fullName>
        <label>PMO Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Duration_Months__c</fullName>
        <description>Used for CWI Project Management calculations</description>
        <label>PM Duration (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Percent_Allocation__c</fullName>
        <description>Used for CWI Project Management calculations</description>
        <label>PM Percent Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRICE_QUOTE_COMPLETE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box triggers the email to the requestor that the quote is complete and the requestor can now add pricing to their associated quote, if applicable.</inlineHelpText>
        <label>PRICE QUOTE COMPLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Please_list_all_departments__c</fullName>
        <label>Please list all departments:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_Book_Chosen__c</fullName>
        <formula>TEXT(Opportunity__r.Price_Book__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Book Chosen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Validity_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Validity Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Total Command</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
                <value>
                    <fullName>DispatchNow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_and_or_Service_Descriptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product and/or Service Descriptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Documented_and_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Documented and Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REQUEST_COMPLETE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to submit the write-in request to the appropriate internal team member for quoting.</inlineHelpText>
        <label>REQUEST COMPLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Name__c</fullName>
        <label>RFP Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Reference_Section__c</fullName>
        <label>RFP Reference Section</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_CWI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associate CWI to another related CWI.</description>
        <inlineHelpText>Associate CWI to another related CWI.</inlineHelpText>
        <label>Related CWI</label>
        <referenceTo>Write_In__c</referenceTo>
        <relationshipLabel>Write-In (Related CWI)</relationshipLabel>
        <relationshipName>Write_In1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Write_In__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related write-in to the current record</description>
        <label>Related Write-In</label>
        <referenceTo>Write_In__c</referenceTo>
        <relationshipLabel>Write-In</relationshipLabel>
        <relationshipName>Write_In</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>x911 BOM Change</fullName>
                    <label>911 BOM Change</label>
                </value>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>Client Call</fullName>
                </value>
                <value>
                    <fullName>Client On-Site</fullName>
                </value>
                <value>
                    <fullName>Contract Capture</fullName>
                </value>
                <value>
                    <fullName>Custom Interface</fullName>
                </value>
                <value>
                    <fullName>Data Conversion</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>GIS</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Installation - Hosted RMS</fullName>
                </value>
                <value>
                    <fullName>Integrated Solutions</fullName>
                </value>
                <value>
                    <fullName>Internal Technical Support</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Product Modification</fullName>
                </value>
                <value>
                    <fullName>UCR to NIBRS</fullName>
                </value>
                <value>
                    <fullName>Project Management Fees</fullName>
                </value>
                <value>
                    <fullName>Refresh</fullName>
                </value>
                <value>
                    <fullName>Re-Host</fullName>
                </value>
                <value>
                    <fullName>RFP/RFI</fullName>
                </value>
                <value>
                    <fullName>Security Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>SOW and/or Project Schedule</fullName>
                </value>
                <value>
                    <fullName>System Engineering</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Tiburon Server/OS Upgrade</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field for write-in reviewer to notate if the write-in has been reviewed but is not yet complete</description>
        <inlineHelpText>Checkbox field for write-in reviewer to notate if the write-in has been reviewed but is not yet complete</inlineHelpText>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Request_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the internal staff member who should receive and complete this request.</inlineHelpText>
        <label>Send Request To:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Write_In</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_to_Engineering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Engineering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Recommended__c</fullName>
        <label>Services Recommended:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Services_Write_In_Cost__c</fullName>
        <formula>Services_Write_In_List_Price__c / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Services Write-In Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Write_In_List_Price__c</fullName>
        <label>Project Services Write-In List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Considerations__c</fullName>
        <label>Special Considerations</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Integration_Fee__c</fullName>
        <inlineHelpText>Enter the system integration fee for this custom write-in if applicable.</inlineHelpText>
        <label>System Integration Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TFS_Work_Item__c</fullName>
        <label>TFS Work Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTRequestor__c</fullName>
        <formula>CreatedBy.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TTRequestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Implementation_Date__c</fullName>
        <label>Target Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Hours__c</fullName>
        <description>Tiburon specific Tech Hours</description>
        <label>Tech Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Training__c</fullName>
        <label>Testing/Training?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Separate Test/Training</fullName>
                </value>
                <value>
                    <fullName>Combined Test/Training</fullName>
                </value>
                <value>
                    <fullName>No Test/Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Contact_Name__c</fullName>
        <label>Third Party Contact Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Documentation_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are Third Party Documentation Attached?  (API; sample files, etc.)</inlineHelpText>
        <label>Third Party Documentation Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party_Email__c</fullName>
        <label>Third Party Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Third_Party_Phone__c</fullName>
        <label>Third Party Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Third_Party_Vendor_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Vendor Identified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party_Vendor_Product_Version__c</fullName>
        <label>Third Party Vendor Product Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Vendor__c</fullName>
        <inlineHelpText>Enter third party vendor name</inlineHelpText>
        <label>Third Party Vendor</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Write_In_Cost__c</fullName>
        <inlineHelpText>Total Cost for the write-in estimate</inlineHelpText>
        <label>Third Party Write-In Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Party_Write_In_List_Price__c</fullName>
        <inlineHelpText>Total List Price for the write-in estimate</inlineHelpText>
        <label>Third Party Write-In List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalISCost__c</fullName>
        <description>TotalISCost is calculated via this workflow: https://na6.salesforce.com/01Q80000000iUZv</description>
        <label>TotalISCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalISList__c</fullName>
        <description>TotalISList is calculated via this workflow: https://na6.salesforce.com/01Q80000000iUZv</description>
        <label>TotalISList</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_DBA_Hours__c</fullName>
        <inlineHelpText>Total number of quoted hours for custom DBA Services</inlineHelpText>
        <label>Total DBA Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_DBA_Services_Cost__c</fullName>
        <formula>Total_DBA_Hours__c * 65.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated using the total number of DBA hours entered x $65/hour</inlineHelpText>
        <label>Total DBA Services Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_DBA_Services_List_Price__c</fullName>
        <formula>Total_DBA_Hours__c * 175.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated using the total number of DBA hours entered x $175/hour</inlineHelpText>
        <label>Total DBA Services List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Engineering_Hours__c +  PMO_Hours__c +  BA_PdM_Analysis_Design_Hours__c +  Documentation_Translation_Hours__c +  Other_Hours__c +  Tech_Hours__c +  Training_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Integrated_Solution_Cost__c</fullName>
        <description>Total cost calculated for integrated solution write-in quotes. Total hours x $65</description>
        <formula>TotalISCost__c 
/*Total_Hours__c * 65.00*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Integrated Solution Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Integrated_Solution_List_Price__c</fullName>
        <description>Total list price calculated for integrated solution write-in quotes.  Total hours x $175</description>
        <formula>TotalISList__c 
/*IF( RecordType.Name = &apos;Integrated Solution&apos;, Total_Hours__c * 175.00, Total_Hours__c * 175.00)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Integrated Solution List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Product_Modification_Cost__c</fullName>
        <description>Total cost calculated for product modification write-in quotes. Total hours x $65</description>
        <formula>Total_Hours__c * 65.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Product Modification Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Product_Modification_List_Price__c</fullName>
        <description>Total list price calculated for product modification write-in quotes. Total hours x $175</description>
        <formula>Total_Hours__c * 175.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Product Modification List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tiburon_CWI_Cost__c</fullName>
        <description>Engineering Hours x $55
PMO Hours x $55
Tech Hours x $48
Training Hours x $40</description>
        <formula>(Engineering_Hours__c * 55.00) + (PMO_Hours__c * 55.00) + (Tech_Hours__c * 48.00) + (Training_Hours__c * 40.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tiburon CWI Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tiburon_CWI_List_Price__c</fullName>
        <description>Engineering Hours + PMO Hours + Tech Hours + Training Hours x $175</description>
        <formula>Total_Hours__c * 175.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tiburon CWI List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Hours__c</fullName>
        <description>Tiburon specific Training Hours</description>
        <label>Training Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_List_Price_Cost__c</fullName>
        <description>Tiburon travel cost calculation</description>
        <formula>( 305.00 * Travel_of_Travel_Days__c * Travel_of_Staff_Traveling__c *  Travel_of_Trips__c ) + ( Travel_of_Trips__c * 650.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Travel calculations must be entered with list and cost the same.</inlineHelpText>
        <label>Travel List Price / Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_of_Staff_Traveling__c</fullName>
        <inlineHelpText>Total number of staff traveling including PM</inlineHelpText>
        <label>Travel - # of Staff Traveling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_of_Travel_Days__c</fullName>
        <inlineHelpText>Total number of travel days, including travel to site</inlineHelpText>
        <label>Travel - # of Travel Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_of_Trips__c</fullName>
        <label>Travel - # of Trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriTech_Product_Version__c</fullName>
        <inlineHelpText>Product version currently installed or to be installed</inlineHelpText>
        <label>TriTech Product Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriTech_Products_Involved__c</fullName>
        <label>TriTech Product Involved</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Multi-Product</fullName>
                </value>
                <value>
                    <fullName>TriTech 911</fullName>
                </value>
                <value>
                    <fullName>Inform CAD</fullName>
                </value>
                <value>
                    <fullName>Inform CAD Archive Server</fullName>
                </value>
                <value>
                    <fullName>Inform Mobile</fullName>
                </value>
                <value>
                    <fullName>Inform Me</fullName>
                </value>
                <value>
                    <fullName>TTMS</fullName>
                </value>
                <value>
                    <fullName>Inform RMS Classic</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS - Hosted</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS GIS</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS GIS - Hosted</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS Reporting Server</fullName>
                </value>
                <value>
                    <fullName>Inform Web RMS Reporting Server - Hosted</fullName>
                </value>
                <value>
                    <fullName>Inform FBR</fullName>
                </value>
                <value>
                    <fullName>Inform Jail</fullName>
                </value>
                <value>
                    <fullName>Fire Records</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>CJIS Cloud Storage</fullName>
                </value>
                <value>
                    <fullName>IQ Search</fullName>
                </value>
                <value>
                    <fullName>CrimeView Dashboard</fullName>
                </value>
                <value>
                    <fullName>FireView Dashboard</fullName>
                </value>
                <value>
                    <fullName>Crimemapping.com</fullName>
                </value>
                <value>
                    <fullName>Responsemapping.com</fullName>
                </value>
                <value>
                    <fullName>CAD 2000/Unix CAD</fullName>
                </value>
                <value>
                    <fullName>Copperfire</fullName>
                </value>
                <value>
                    <fullName>FACTS/IMS</fullName>
                </value>
                <value>
                    <fullName>TC CAD</fullName>
                </value>
                <value>
                    <fullName>TC Mobile</fullName>
                </value>
                <value>
                    <fullName>TC RMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TriTech_Requestor_Phone__c</fullName>
        <formula>TriTech_Requestor__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TriTech Requestor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriTech_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TriTech Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Estimates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trigger_Event__c</fullName>
        <inlineHelpText>Select &quot;Yes&quot; if the non-TriTech systems will send a trigger event to the Tritech system indication data is available for exchange.</inlineHelpText>
        <label>Trigger Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Virtualized__c</fullName>
        <label>Virtualized?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>Acropolis</fullName>
                </value>
                <value>
                    <fullName>Hyper-V (not supported)</fullName>
                </value>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Maintenance_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty/Maintenance Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Write_In_Description__c</fullName>
        <label>Write-In Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X911_BOM_Change_Type__c</fullName>
        <label>911 BOM Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuercher_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box should be checked if this request is a Zuercher opportunity or project estimate.</inlineHelpText>
        <label>Zuercher Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Users__c</fullName>
        <label># of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>